chore: fix top spacing of first section in you page

--- a/apps/web/src/app/core/pages/feed/you-page/you-page.component.scss
+++ b/apps/web/src/app/core/pages/feed/you-page/you-page.component.scss
@@ -22,6 +22,10 @@ section {
   &:first-child {
     .section-header {
       border-top: 0;
+
+      .section-heading {
+        margin-top: 0;
+      }
     }
   }
 }
